[package]
name = "untitled1"
version = "0.1.0"
authors = ["mshankayi"]
edition = "2018"

[dependencies]
mio = { version = "0.7", features = ["os-poll", "tcp","udp"] }
tokio = { version = "0.2", features = ["full"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.7.1"
quick-xml = "0.18.1"